Address code review feedback - use modern Java idioms and proper imports
Co-authored-by: shashanksaxena-tz <231244063+shashanksaxena-tz@users.noreply.github.com>